[tool.poetry]
name = "nonebot-plugin-zsmeme"
version = "0.0.4"
description = "发送寰宇重工中的表情"
authors = ["shiyingyingjiang <2798134864@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_zsmeme"}]
homepage = "https://github.com/shi-yingyingjiang/nonebot-plugin-zsmeme"
repository = "https://github.com/shi-yingyingjiang/nonebot-plugin-zsmeme"


[tool.poetry.dependencies]
python = ">=3.8"
nonebot2 = ">=2.2.1"
nonebot-adapter-onebot = ">=2.2.3"
lxml = ">=4.9.3"
httpx = ">=0.27.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
